First steps to i18n

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Burr</string>
     <string name="title_activity_main2">My Compose App</string>
+    <string name="step_type_add_coffee">Add coffee</string>
+    <string name="step_type_water">Add water</string>
+    <string name="step_type_wait">Wait</string>
+    <string name="step_type_other">Other</string>
 </resources>
