--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="step_type_water">Add water</string>
     <string name="step_type_wait">Wait</string>
     <string name="step_type_other">Other</string>
+    <string name="step_add_name">Name</string>
+    <string name="step_add_duration">Duration</string>
+    <string name="step_add_weight">Weight</string>
+    <string name="step_add_save">Save and add next</string>
 </resources>
