--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,14 @@
     <string name="recipe_edit_description">Description</string>
     <string name="recipe_edit_title">Edit recipe</string>
     <string name="recipe_add_new_title">Create new recipe</string>
+    <string name="recipe_details_automation_dialog_title">Direct link</string>
+    <string name="recipe_details_automation_dialog_text">Use this link to go directly into this recipe. Write it to NFC tag or create automation task in Tasker to make your morning coffee easier.\nWARNING: You cannot share recipe this way!</string>
     <string name="recipe_details_button_start">Start</string>
     <string name="recipe_details_button_pause">Stop</string>
     <string name="timer_progress_weight">%1$sg/%2$sg</string>
     <string name="timer_step_name_time">%1$s (%2$ss)</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_delete">Delete</string>
+    <string name="button_copy">Copy</string>
+    <string name="snackbar_copied">Copied!</string>
 </resources>
