--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
     <string name="button_delete">Delete</string>
     <string name="button_copy">Copy</string>
     <string name="snackbar_copied">Copied!</string>
+    <string name="settings_licenses_title">Open source licenses</string>
+    <string name="settings_title">Settings</string>
+    <string name="settings_about_item">About App</string>
+    <string name="settings_about_title">About</string>
+    <string name="settings_licenses_item">Acknowledgments</string>
+    <string name="settings_github_item">Github Repository</string>
 </resources>
