Little message after coffee is done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="settings_licenses_item">Acknowledgments</string>
     <string name="settings_github_item">Github Repository</string>
     <string name="step_add_remove">Remove</string>
+    <string name="timer_enjoy">Enjoy your coffee</string>
 </resources>
