--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -32,4 +32,5 @@
     <string name="settings_licenses_item">Licencje</string>
     <string name="settings_github_item">Repozytorium na Github</string>
     <string name="step_add_remove">Usuń</string>
+    <string name="timer_enjoy">Czas na kawę</string>
 </resources>
