--- a/docs/404.md
+++ b/docs/404.md
@@ -1,6 +1,9 @@
 ---
 permalink: /404.html
+layout: default
+
 ---
+# Whoops
 
 It seems like you've opened a page that does not exist.
 If you tried to open the recipe's deep link you must open it using the Cofi app.
