Added Hubert Tereszkiewicz credits to the app

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -66,4 +66,6 @@ Grubość mielenia: średnio
 Temperature: im cieplej tym lepiej (szczególnie z jasno paloną kawą)
 Upewnij się, że najgrubsza strona filtra jest po stronie lejka
 Filtr nie powienien idealnie przywierać do scianek z każdej strony, powietrze musie gdzieś uciekać"</string>
+    <string name="tereszkiewicz_credits_title">Ikona aplikacji: Hubert Tereszkiewicz</string>
+    <string name="tereszkiewicz_credits_subtitle">Sprawdź jego Dribbble!</string>
 </resources>
