--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -70,4 +70,8 @@ Filtr nie powienien idealnie przywierać do scianek z każdej strony, powietrze 
     <string name="tereszkiewicz_credits_subtitle">Sprawdź jego Dribbble!</string>
     <string name="recipe_create_title">Dodaj przepis</string>
     <string name="settings_ding_item">Dźwięk zmiany kroku</string>
+    <string name="button_continue_editing">Edytuj dalej</string>
+    <string name="button_discard">Porzuć</string>
+    <string name="step_unsaved_text">Chcesz je porzucić?</string>
+    <string name="step_unsaved_title">Masz niezapisane zmiany</string>
 </resources>
