--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Cofi</string>
     <string name="timer_progress_weight">%1$sg/%2$sg</string>
     <string name="timer_step_name_time">%1$s (%2$ss)</string>
     <string name="step_type_add_coffee">Aggiungi il caffè</string>
@@ -11,8 +10,8 @@
     <string name="step_add_duration">Durata (s)</string>
     <string name="step_add_weight">Peso (g)</string>
     <string name="step_add_save">Salva</string>
-    <string name="step_delete_title">Sei sicuro?</string>
-    <string name="step_delete_text">Questo rimuoverà la ricetta permanentemente</string>
+    <string name="recipe_delete_title">Sei sicuro?</string>
+    <string name="recpie_delete_text">Questo rimuoverà la ricetta permanentemente</string>
     <string name="recipe_edit_name">Nome</string>
     <string name="recipe_edit_description">Descrizione</string>
     <string name="recipe_edit_title">Modifica ricetta</string>
