--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -73,4 +73,5 @@ Filtr nie powienien idealnie przywierać do scianek z każdej strony, powietrze 
     <string name="recipe_unsaved_title">Masz niezapisane zmiany</string>
     <string name="recipe_clone_title">Skopiować ten przepis?</string>
     <string name="recpie_clone_text">Stworzy to duplikat tego przepisu</string>
+    <string name="recpie_clone_suffix">%1$s - Kopia</string>
 </resources>
